# GmockExample

./: CMakeLists.txt  README.md
mock/: CMakeLists.txt  time_mock.cpp  time_mock.hpp
production_code/: CMakeLists.txt  main.cpp  target_code.cpp  target_code.h
test/: CMakeLists.txt  test_time.cpp
